[gd_scene load_steps=17 format=3 uid="uid://dyt64ecawf00s"]

[ext_resource type="Script" uid="uid://nqibqah42t2w" path="res://scripts/main/hud/launch_hud.gd" id="1_7w3j4"]
[ext_resource type="Texture2D" uid="uid://dlxhloqf1hixd" path="res://assets/UI/Score_screen/mask_speed.png" id="2_asww3"]
[ext_resource type="FontFile" uid="uid://bek77qahso3ha" path="res://assets/Font/Jersey10-Regular.ttf" id="3_wayuj"]
[ext_resource type="Texture2D" uid="uid://cmla107r52jf2" path="res://assets/UI/Score_screen/speed.png" id="4_ne6f5"]
[ext_resource type="Texture2D" uid="uid://cvndbuwand1dc" path="res://assets/UI/Score_screen/mask_X.png" id="5_kvt6v"]
[ext_resource type="Texture2D" uid="uid://ba2pbu4hs4oku" path="res://assets/UI/Score_screen/mask_splash.png" id="6_144e4"]
[ext_resource type="Texture2D" uid="uid://xx2vbxuvuim4" path="res://assets/UI/Score_screen/splash.png" id="7_yc8yf"]
[ext_resource type="Texture2D" uid="uid://bek7w0xkifxay" path="res://assets/UI/Score_screen/mask_score.png" id="8_amh6s"]
[ext_resource type="Texture2D" uid="uid://1tusguhnsux0" path="res://assets/UI/Score_screen/score.png" id="9_eaoyo"]
[ext_resource type="Texture2D" uid="uid://dqw5saf0b0ntr" path="res://assets/UI/Score_screen/mask_egal_score.png" id="10_uqs87"]
[ext_resource type="LabelSettings" uid="uid://cvxoobwi2pn2x" path="res://resources/label_settings_basic.tres" id="11_asww3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vl2ax"]
content_margin_left = 30.0
content_margin_top = 10.0
content_margin_right = 31.0
content_margin_bottom = 10.0
texture = ExtResource("2_asww3")
texture_margin_left = 30.0
texture_margin_top = 18.0
texture_margin_right = 30.0
texture_margin_bottom = 16.0

[sub_resource type="LabelSettings" id="LabelSettings_gfhlh"]
font = ExtResource("3_wayuj")
font_size = 28

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_erl8u"]
content_margin_left = 20.0
content_margin_top = 40.0
content_margin_right = 50.0
content_margin_bottom = 4.0
texture = ExtResource("6_144e4")
texture_margin_left = 14.0
texture_margin_top = 48.0
texture_margin_right = 132.0
texture_margin_bottom = 10.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5uvyi"]
texture = ExtResource("8_amh6s")
texture_margin_left = 72.0
texture_margin_top = 44.0
texture_margin_right = 97.0
expand_margin_top = 10.0

[sub_resource type="LabelSettings" id="LabelSettings_c3h80"]
font = ExtResource("3_wayuj")
font_size = 52

[node name="LAUNCH_VIEW" type="Control" node_paths=PackedStringArray("date_day", "date_separator", "date_round", "score_root", "score_total_root", "score_total_label", "score_dist_label", "score_bounce_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7w3j4")
date_day = NodePath("DateMargin/DateBox/LabelDay")
date_separator = NodePath("DateMargin/DateBox/LabelSeparate")
date_round = NodePath("DateMargin/DateBox/LabelRound")
score_root = NodePath("ScoreLabel")
score_total_root = NodePath("ScoreLabel/TotalRoot")
score_total_label = NodePath("ScoreLabel/TotalRoot/cont_score/Container_Score/Label_SCORE")
score_dist_label = NodePath("ScoreLabel/cont_speed/Container_Dist/Label_Dist")
score_bounce_label = NodePath("ScoreLabel/cont_splash/MarginContainer2/Container_Bounce/Label_Bounce")

[node name="ScoreLabel" type="HBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 266.0
offset_top = 57.0
offset_right = 1009.0
offset_bottom = 170.0

[node name="cont_speed" type="HFlowContainer" parent="ScoreLabel"]
layout_mode = 2
reverse_fill = true

[node name="Container_Dist" type="PanelContainer" parent="ScoreLabel/cont_speed"]
custom_minimum_size = Vector2(121, 50)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vl2ax")

[node name="Label_Dist" type="Label" parent="ScoreLabel/cont_speed/Container_Dist"]
layout_mode = 2
text = "2"
label_settings = SubResource("LabelSettings_gfhlh")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ScoreLabel/cont_speed"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = -7

[node name="TextureRect_Dist" type="TextureRect" parent="ScoreLabel/cont_speed/MarginContainer"]
layout_mode = 2
texture = ExtResource("4_ne6f5")
stretch_mode = 2

[node name="Cont_X" type="MarginContainer" parent="ScoreLabel"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_bottom = -6

[node name="TextureRect_X" type="TextureRect" parent="ScoreLabel/Cont_X"]
layout_mode = 2
texture = ExtResource("5_kvt6v")

[node name="cont_splash" type="HFlowContainer" parent="ScoreLabel"]
layout_mode = 2
reverse_fill = true

[node name="MarginContainer2" type="MarginContainer" parent="ScoreLabel/cont_splash"]
layout_mode = 2
theme_override_constants/margin_top = -10
theme_override_constants/margin_bottom = 4

[node name="Container_Bounce" type="PanelContainer" parent="ScoreLabel/cont_splash/MarginContainer2"]
custom_minimum_size = Vector2(149, 69)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_erl8u")

[node name="Label_Bounce" type="Label" parent="ScoreLabel/cont_splash/MarginContainer2/Container_Bounce"]
layout_mode = 2
text = "2"
label_settings = SubResource("LabelSettings_gfhlh")
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="ScoreLabel/cont_splash"]
layout_mode = 2
theme_override_constants/margin_left = -20
theme_override_constants/margin_bottom = -90

[node name="TextureRect_Bounce" type="TextureRect" parent="ScoreLabel/cont_splash/MarginContainer"]
layout_mode = 2
texture = ExtResource("7_yc8yf")
stretch_mode = 2

[node name="TotalRoot" type="MarginContainer" parent="ScoreLabel"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = -40
theme_override_constants/margin_bottom = -14

[node name="cont_score" type="HFlowContainer" parent="ScoreLabel/TotalRoot"]
layout_mode = 2
reverse_fill = true

[node name="Container_Score" type="PanelContainer" parent="ScoreLabel/TotalRoot/cont_score"]
custom_minimum_size = Vector2(242, 123)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_5uvyi")

[node name="Label_SCORE" type="Label" parent="ScoreLabel/TotalRoot/cont_score/Container_Score"]
layout_mode = 2
text = "221356215156165"
label_settings = SubResource("LabelSettings_c3h80")

[node name="MarginContainer" type="MarginContainer" parent="ScoreLabel/TotalRoot/cont_score"]
layout_mode = 2
theme_override_constants/margin_left = 66
theme_override_constants/margin_bottom = -230

[node name="TextureRect_Score" type="TextureRect" parent="ScoreLabel/TotalRoot/cont_score/MarginContainer"]
layout_mode = 2
texture = ExtResource("9_eaoyo")
stretch_mode = 2

[node name="cont_equals" type="MarginContainer" parent="ScoreLabel/TotalRoot"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/margin_left = 15
theme_override_constants/margin_bottom = 25

[node name="TextureRect_Equals" type="TextureRect" parent="ScoreLabel/TotalRoot/cont_equals"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
texture = ExtResource("10_uqs87")
stretch_mode = 2

[node name="DateMargin" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="DateBox" type="HBoxContainer" parent="DateMargin"]
layout_mode = 2

[node name="LabelDay" type="Label" parent="DateMargin/DateBox"]
layout_mode = 2
text = "DAY 1"
label_settings = ExtResource("11_asww3")
vertical_alignment = 1

[node name="LabelSeparate" type="Label" parent="DateMargin/DateBox"]
layout_mode = 2
text = "-"
label_settings = ExtResource("11_asww3")
vertical_alignment = 1

[node name="LabelRound" type="Label" parent="DateMargin/DateBox"]
layout_mode = 2
text = "ROUND 1/3"
label_settings = ExtResource("11_asww3")
vertical_alignment = 1
